--- a/appsettings.json
+++ b/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ConnStr": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=AnalyticsDB;Integrated Security=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "ConnStr": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Bogholderen;Integrated Security=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
   "ParallelTasksCount": 20
 }
