--- a/Bogholderen/package.json
+++ b/Bogholderen/package.json
@@ -25,7 +25,10 @@
     "@angular/router": "~13.1.1",
     "@nebular/theme": "^9.0.2",
     "bootstrap": "^5.1.3",
+    "chart.js": "^3.7.1",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
+    "ng2-charts": "^3.0.11",
     "oidc-client": "^1.11.5",
     "popper.js": "^1.16.0",
     "run-script-os": "^1.1.6",
