--- a/appsettings.json
+++ b/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ConnStr": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Bogholderen;Integrated Security=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "ConnStr": "Server=tcp:bogholderen.database.windows.net,1433;Initial Catalog=dbbogholderen;Persist Security Info=False;User ID=Ostefar;Password=Senate666;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "ParallelTasksCount": 20
 }
