--- a/Bogholderen/package.json
+++ b/Bogholderen/package.json
@@ -25,6 +25,8 @@
     "@angular/platform-server": "~13.1.1",
     "@angular/router": "~13.1.1",
     "@nebular/theme": "^9.0.2",
+    "@ngx-translate/core": "^14.0.0",
+    "@ngx-translate/http-loader": "^7.0.0",
     "bootstrap": "^5.1.3",
     "chart.js": "^3.7.1",
     "font-awesome": "^4.7.0",
