--- a/WittSolutionsApp2.csproj
+++ b/WittSolutionsApp2.csproj
@@ -31,15 +31,27 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="Bogholderen\src\app\employees\Employee.ts" />
+    <None Remove="Bogholderen\src\app\service\employee.service.ts" />
     <None Remove="Bogholderen\src\app\service\notification-service.ts" />
     <None Remove="Bogholderen\src\app\service\user.service.ts" />
     <None Remove="Bogholderen\src\app\users\User.ts" />
   </ItemGroup>
 
   <ItemGroup>
+    <TypeScriptCompile Include="Bogholderen\src\app\employees\Employee.ts">
+      <SubType>Code</SubType>
+    </TypeScriptCompile>
+    <TypeScriptCompile Include="Bogholderen\src\app\service\employee.service.ts" />
     <TypeScriptCompile Include="Bogholderen\src\app\service\notification-service.ts" />
     <TypeScriptCompile Include="Bogholderen\src\app\service\user.service.ts" />
     <TypeScriptCompile Include="Bogholderen\src\app\users\User.ts" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Bogholderen\src\app\customers\" />
+    <Folder Include="Bogholderen\src\app\management\" />
+    <Folder Include="Bogholderen\src\app\projects\" />
   </ItemGroup>
 
     <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
