--- a/WittSolutionsApp2.csproj
+++ b/WittSolutionsApp2.csproj
@@ -33,9 +33,11 @@
   <ItemGroup>
     <None Remove="Bogholderen\src\app\customers\Customer.ts" />
     <None Remove="Bogholderen\src\app\employees\Employee.ts" />
+    <None Remove="Bogholderen\src\app\projects\Project.ts" />
     <None Remove="Bogholderen\src\app\service\customer.service.ts" />
     <None Remove="Bogholderen\src\app\service\employee.service.ts" />
     <None Remove="Bogholderen\src\app\service\notification-service.ts" />
+    <None Remove="Bogholderen\src\app\service\project.service.ts" />
     <None Remove="Bogholderen\src\app\service\user.service.ts" />
     <None Remove="Bogholderen\src\app\users\User.ts" />
   </ItemGroup>
@@ -47,6 +49,8 @@
     <TypeScriptCompile Include="Bogholderen\src\app\employees\Employee.ts">
       <SubType>Code</SubType>
     </TypeScriptCompile>
+    <TypeScriptCompile Include="Bogholderen\src\app\projects\Project.ts" />
+    <TypeScriptCompile Include="Bogholderen\src\app\service\project.service.ts" />
     <TypeScriptCompile Include="Bogholderen\src\app\service\customer.service.ts" />
     <TypeScriptCompile Include="Bogholderen\src\app\service\employee.service.ts" />
     <TypeScriptCompile Include="Bogholderen\src\app\service\notification-service.ts" />
@@ -56,7 +60,6 @@
 
   <ItemGroup>
     <Folder Include="Bogholderen\src\app\management\" />
-    <Folder Include="Bogholderen\src\app\projects\" />
   </ItemGroup>
 
     <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
