--- a/Bogholderen/package.json
+++ b/Bogholderen/package.json
@@ -27,6 +27,7 @@
     "@nebular/theme": "^9.0.2",
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
+    "@syncfusion/ej2-angular-dropdowns": "^20.1.57",
     "bootstrap": "^5.1.3",
     "chart.js": "^3.7.1",
     "font-awesome": "^4.7.0",
