--- a/WittSolutionsApp2.csproj
+++ b/WittSolutionsApp2.csproj
@@ -33,6 +33,7 @@
   <ItemGroup>
     <None Remove="Bogholderen\src\app\customers\Customer.ts" />
     <None Remove="Bogholderen\src\app\employees\Employee.ts" />
+    <None Remove="Bogholderen\src\app\projects\Hours.ts" />
     <None Remove="Bogholderen\src\app\projects\Project.ts" />
     <None Remove="Bogholderen\src\app\service\customer.service.ts" />
     <None Remove="Bogholderen\src\app\service\employee.service.ts" />
@@ -50,6 +51,7 @@
     <TypeScriptCompile Include="Bogholderen\src\app\employees\Employee.ts">
       <SubType>Code</SubType>
     </TypeScriptCompile>
+    <TypeScriptCompile Include="Bogholderen\src\app\projects\Hours.ts" />
     <TypeScriptCompile Include="Bogholderen\src\app\projects\Project.ts" />
     <TypeScriptCompile Include="Bogholderen\src\app\service\management.service.ts" />
     <TypeScriptCompile Include="Bogholderen\src\app\service\project.service.ts" />
