--- a/Bogholderen/package.json
+++ b/Bogholderen/package.json
@@ -30,6 +30,7 @@
     "@syncfusion/ej2-angular-dropdowns": "^20.1.57",
     "bootstrap": "^5.1.3",
     "chart.js": "^3.7.1",
+    "file-saver": "^2.0.5",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
     "ng2-charts": "^3.0.11",
@@ -39,12 +40,14 @@
     "run-script-os": "^1.1.6",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.1.2",
     "@angular/cli": "~13.1.2",
     "@angular/compiler-cli": "~13.1.1",
+    "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.8",
     "@types/node": "^12.11.1",
