--- a/WittSolutionsApp2.csproj
+++ b/WittSolutionsApp2.csproj
@@ -33,10 +33,12 @@
   <ItemGroup>
     <None Remove="Bogholderen\src\app\customers\Customer.ts" />
     <None Remove="Bogholderen\src\app\employees\Employee.ts" />
+    <None Remove="Bogholderen\src\app\hours\Price.ts" />
     <None Remove="Bogholderen\src\app\projects\Hours.ts" />
     <None Remove="Bogholderen\src\app\projects\Project.ts" />
     <None Remove="Bogholderen\src\app\service\customer.service.ts" />
     <None Remove="Bogholderen\src\app\service\employee.service.ts" />
+    <None Remove="Bogholderen\src\app\service\excel.service.ts" />
     <None Remove="Bogholderen\src\app\service\hours.service.ts" />
     <None Remove="Bogholderen\src\app\service\management.service.ts" />
     <None Remove="Bogholderen\src\app\service\notification-service.ts" />
@@ -52,8 +54,10 @@
     <TypeScriptCompile Include="Bogholderen\src\app\employees\Employee.ts">
       <SubType>Code</SubType>
     </TypeScriptCompile>
+    <TypeScriptCompile Include="Bogholderen\src\app\hours\Price.ts" />
     <TypeScriptCompile Include="Bogholderen\src\app\hours\Hours.ts" />
     <TypeScriptCompile Include="Bogholderen\src\app\projects\Project.ts" />
+    <TypeScriptCompile Include="Bogholderen\src\app\service\excel.service.ts" />
     <TypeScriptCompile Include="Bogholderen\src\app\service\management.service.ts" />
     <TypeScriptCompile Include="Bogholderen\src\app\service\hours.service.ts" />
     <TypeScriptCompile Include="Bogholderen\src\app\service\project.service.ts" />
