--- a/Bogholderen/angular.json
+++ b/Bogholderen/angular.json
@@ -31,7 +31,9 @@
               "node_modules/font-awesome/css/font-awesome.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/chart.js/dist/chart.js"
+            ]
           },
           "configurations": {
             "production": {
