--- a/Bogholderen/package.json
+++ b/Bogholderen/package.json
@@ -15,6 +15,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~13.1.1",
+    "@angular/cdk": "^13.0.0",
     "@angular/common": "~13.1.1",
     "@angular/compiler": "~13.1.1",
     "@angular/core": "~13.1.1",
@@ -24,6 +25,7 @@
     "@angular/platform-browser-dynamic": "~13.1.1",
     "@angular/platform-server": "~13.1.1",
     "@angular/router": "~13.1.1",
+    "@fortawesome/fontawesome-free": "^6.0.0",
     "@nebular/theme": "^9.0.2",
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
@@ -33,6 +35,7 @@
     "file-saver": "^2.0.5",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
+    "mdb-angular-ui-kit": "^2.2.0",
     "ng2-charts": "^3.0.11",
     "ngx-toastr": "^14.3.0",
     "oidc-client": "^1.11.5",
